# hypatia-ai

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  autogendebug.sh  configure.ac
src/: Makefile.am  activation.c  activation.h  ann.c  ann.h  combiner.c  combiner.h  constants.h  math.c  math.h  network.c  network.h  neuron.c  neuron.h  params.c  params.h  testactivation.c  testcombiner.c  testmath.c  testneuron.c  testneuron.h  testutil.c  testvector.c  util.c  util.h  vector.c  vector.h
tests/: test_functions.sh
tests/check/feature/: libactivation.txt  libcombiner.txt  libmath.txt  libneuron.txt  libutil.txt
tests/check/mem/: libactivation.txt  libcombiner.txt  libmath.txt  libneuron.txt  libutil.txt  libvector.txt
tests/scripts/feature/: libactivation.sh  libcombiner.sh  libmath.sh  libneuron.sh  libutil.sh  libvector.sh
tests/scripts/mem/: libactivation.sh  libcombiner.sh  libmath.sh  libneuron.sh  libutil.sh  libvector.sh
